--- a/css/index.css
+++ b/css/index.css
@@ -1,45 +1,55 @@
 html,
 body {
-   min-width: 1122px;
-  margin: 0;
-  padding: 0;
+    min-width: 1122px;
+    margin: 0;
+    padding: 0;
 }
-p, span, a, ul, h2{
+
+p,
+span,
+a,
+ul,
+h2 {
     padding: 0px;
     margin: 0px;
 }
+
 body {
-  background: #000000 url("../technomart-index.jpg") no-repeat 50% 3px;
-  background-size: 1200px auto;
+    background: #000000 url("../technomart-index.jpg") no-repeat 50% 3px;
+    background-size: 1200px auto;
 }
+
 header {
-  /* Только для оформления сетки */
-  min-height: 70px;
-  background: rgba(0, 128, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    /* Только для оформления сетки */
+    min-height: 70px;
+    background: rgba(0, 128, 0, 0.2);
+    box-shadow: 0 0 0 3px green;
     margin-bottom: 60px;
-  
 }
-header .logo{
+
+header .logo {
     float: left;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
     min-height: 40px;
     width: 220px;
 }
-.search input{
+
+.search input {
     display: inline-block;
     vertical-align: top;
     float: left;
 }
-.main-search{
+
+.main-search {
     width: 30px;
     display: inline-block;
-    height:32px;
+    height: 32px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
 }
-.main-search-submit{
+
+.main-search-submit {
     margin-top: 15px;
     display: inline-block;
 }
@@ -50,95 +60,104 @@ form {
     height: 40px;
     float: left;
     background: rgba(0, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(0, 255, 82);
+    box-shadow: 0 0 0 3px rgb(0, 255, 82);
     margin-bottom: 50px;
 }
 
-.basket-form{
+.basket-form {
     float: right;
     width: 300px;
     background: rgba(0, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px white;
-}
-form a,
-.marker{
-    float: right;
-    width: 150px;
-    height:40px;
-    background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
+    box-shadow: 0 0 0 3px white;
 }
 
-.under-header{
-   margin-bottom: 33px; 
+form a,
+.marker {
+    float: right;
+    width: 150px;
+    height: 40px;
+    background: rgba(255, 45, 82, 0.2);
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
 }
-.under-header p, .under-header div,
-autorizated-block a{
+
+.under-header {
+    margin-bottom: 33px;
+}
+
+.under-header p,
+.under-header div,
+autorizated-block a {
     display: inline-block;
     vertical-align: top;
-    
 }
-.header-info{
+
+.header-info {
     display: inline-block;
     width: 220px;
     height: 80px;
     margin: 0px 0px 0px 50px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
-}
-.main-number-adress{
-     display: inline-block;
-     width:270px;
-    height: 80px;
-     margin-left: 50px;
-    background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
-}
-.main-number{
-    display: inline-block;
-    width:270px;
-    height: 45px;
-    box-shadow: 0 0 0 3px rgb(255, 245, 82);
-    
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
 }
 
-.autorizated-block{
+.main-number-adress {
+    display: inline-block;
+    width: 270px;
+    height: 80px;
+    margin-left: 50px;
+    background: rgba(255, 45, 82, 0.2);
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
+}
+
+.main-number {
+    display: inline-block;
+    width: 270px;
+    height: 45px;
+    box-shadow: 0 0 0 3px rgb(255, 245, 82);
+}
+
+.autorizated-block {
     display: inline-block;
     width: 300px;
     height: 40px;
     margin-left: 40px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
 }
-.user-name, .register-link{
+
+.user-name,
+.register-link {
     display: inline-block;
     width: 120px;
     height: 40px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 245, 82);
+    box-shadow: 0 0 0 3px rgb(255, 245, 82);
     margin-left: 20px;
-   
 }
-.register-link{
-     margin-left: 10px;
+
+.register-link {
+    margin-left: 10px;
     width: 140px;
-    
 }
-.header-second{
+
+.header-second {
     height: 60px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 245, 82);
+    box-shadow: 0 0 0 3px rgb(255, 245, 82);
     margin-top: 33px;
     margin-bottom: 60px;
 }
+
 .header-menu li,
-.inside-navigation li{
-     display: inline-block;
+.inside-navigation li {
+    display: inline-block;
 }
-.wrapper-items :first-child{
+
+.wrapper-items:first-child {
     margin-left: 0;
 }
-.items{
+
+.items {
     margin-left: 20px;
     margin-bottom: 20px;
     float: left;
@@ -146,206 +165,234 @@ autorizated-block a{
     width: 300px;
     height: 122px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px yellow;
+    box-shadow: 0 0 0 3px yellow;
 }
-.slide{
+
+.slide {
     float: left;
     margin-bottom: 52px;
 }
-.names-block{
+
+.names-block {
     height: 85px;
     background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 245, 82);
+    box-shadow: 0 0 0 3px rgb(255, 245, 82);
     margin-bottom: 20px;
 }
 
- div .products{
-   margin-bottom: 23px;
-     padding-left: 15px;
-     vertical-align: top;
-     margin-right: 15px;
-     width: 220px;
-     height: 320px;
+div .products {
+    margin-bottom: 23px;
+    padding-left: 15px;
+    vertical-align: top;
+    margin-right: 15px;
+    width: 220px;
+    height: 320px;
     display: inline-block;
-     box-sizing: border-box;
-     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-sizing: border-box;
+    background: rgba(128, 0, 0, 0.2);
+    box-shadow: 0 0 0 3px green;
 }
-.wrapper-company{
+
+.wrapper-company {
     margin-bottom: 65px;
 }
-.father-products :last-child {
- margin-right: 0;
+
+.father-products:last-child {
+    margin-right: 0;
 }
-.wrapper-company :nth-child(4n+4){
-  margin-right: 0;  
-    
+
+.wrapper-company:nth-child(4n+4) {
+    margin-right: 0;
 }
-.popular-company-name{
+
+.popular-company-name {
     display: inline-block;
     margin-right: 16px;
     margin-bottom: 17px;
 }
-.wrapper-services{
+
+.wrapper-services {
     margin-bottom: 100px;
 }
+
 .wrapper-services ul,
-.wrapper-services div{
-  vertical-align: top;  
+.wrapper-services div {
+    vertical-align: top;
 }
-.service, .delivery{
-    margin-top: 128px; 
+
+.service,
+.delivery {
+    margin-top: 128px;
     height: 50px;
     width: 300px;
-     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    background: rgba(128, 0, 0, 0.2);
+    box-shadow: 0 0 0 3px green;
 }
-.services-info{
+
+.services-info {
     width: 400px;
     margin-bottom: 60px;
     margin-top: 10px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
 }
-.services-list, .delivery-block{
+
+.services-list,
+.delivery-block {
     display: inline-block;
 }
-.services-list li{
+
+.services-list li {
     width: 240px;
     height: 60px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
 }
-.delivery-block{
+
+.delivery-block {
     margin-left: 76px;
 }
-.delivery{
+
+.delivery {
     margin-top: 0px;
 }
-.delivery-info{
+
+.delivery-info {
     height: 120px;
     width: 290px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
 }
-.garanty-block, .credit-block{
+
+.garanty-block,
+.credit-block {
     display: none;
 }
-.company-info{
+
+.company-info {
     margin-bottom: 82px;
 }
-.company-info-left{
+
+.company-info-left {
     margin-top: 80px;
     width: 540px;
     height: 380px;
     float: left;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
 }
-.company-info-right{
+
+.company-info-right {
     margin-top: 80px;
     width: 300px;
     height: 380px;
     float: right;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
 }
-footer{
-    
+
+footer {
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
 }
-.footer-logo{
-   background: rgba(255, 45, 82, 0.2);
-  box-shadow: 0 0 0 3px rgb(255, 45, 82);
+
+.footer-logo {
+    background: rgba(255, 45, 82, 0.2);
+    box-shadow: 0 0 0 3px rgb(255, 45, 82);
     min-height: 65px;
     width: 220px;
-    display:inline-block;
+    display: inline-block;
 }
-.secondary-footer{
+
+.secondary-footer {
     margin-top: 53px;
     height: 190px;
 }
-.secondary-footer ul{
+
+.secondary-footer ul {
     margin-left: 155px;
     width: 560px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px green;
+    box-shadow: 0 0 0 3px green;
     height: 65px;
     display: inline-block;
 }
-.footer-main-list li, .footer-bottom-list li{
+
+.footer-main-list li,
+.footer-bottom-list li {
     display: inline-block;
-    
 }
+
 .footer-main-bottom span,
-.footer-main-bottom ul{
+.footer-main-bottom ul {
     vertical-align: top;
 }
 
-.footer-adress{
+.footer-adress {
     margin-top: 25px;
     display: inline-block;
     width: 340px;
-     height: 50px;
+    height: 50px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px yellow;
+    box-shadow: 0 0 0 3px yellow;
 }
-.secondary-footer .footer-bottom-list{
+
+.secondary-footer .footer-bottom-list {
     margin-left: 35px;
     height: 50px;
     margin-top: 25px;
-    
 }
-.main-footer{
+
+.main-footer {
     padding-top: 30px;
     padding-bottom: 20px;
     height: 60px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px white;
+    box-shadow: 0 0 0 3px white;
 }
-.rights{
+
+.rights {
     height: 50px;
-float: left;
+    float: left;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px white;
+    box-shadow: 0 0 0 3px white;
 }
 
 .footer-social {
-  float: left;
-  width: 180px;
+    float: left;
+    width: 180px;
     margin-left: 140px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px white;
-
-  /* Только для оформления сетки */
-  min-height: 50px;
+    box-shadow: 0 0 0 3px white;
+    /* Только для оформления сетки */
+    min-height: 50px;
 }
 
 .footer-copyright {
-  float: right;
-  width: 140px;
+    float: right;
+    width: 140px;
     margin-left: 20px;
     background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px white;
-
-  /* Только для оформления сетки */
-  min-height: 50px;
+    box-shadow: 0 0 0 3px white;
+    /* Только для оформления сетки */
+    min-height: 50px;
 }
 
- .clearfix::after {
+.clearfix::after {
     content: "";
     display: table;
     clear: both;
 }
+
 .container {
-  width: 940px;
-  padding: 0 10px;
-  margin: 0 auto;
-  /* Только для оформления сетки */
-  background: rgba(128, 0, 0, 0.2);
-  box-shadow: 0 0 0 3px red;
+    width: 940px;
+    padding: 0 10px;
+    margin: 0 auto;
+    /* Только для оформления сетки */
+    background: rgba(128, 0, 0, 0.2);
+    box-shadow: 0 0 0 3px red;
 }
-input{
+
+input {
     display: block;
 }
